k8s/apps/media/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 6881
      targetPort: 6881
      name: torrent-tcp
    - protocol: UDP
      port: 6881
      targetPort: 6881
      name: torrent-udp
